<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".calcuv1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/hdp_0"
        android:layout_weight="2"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/text_resutl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_resutl"
            android:gravity="right|bottom"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_60"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/hdp_0"
        android:layout_weight="8"
        android:stretchColumns="*">

        <TableRow android:layout_marginTop="@dimen/dp_5">

            <Button
                android:id="@+id/button_ac"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_ac"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_typenumber"
                android:layout_height="@dimen/dp_80"
                android:text="@string/type_number"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_percent"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_percent"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_sum"
                android:layout_height="@dimen/dp_80"
                android:background="@color/color_calculator"
                android:text="@string/key_summation"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/dp_5">

            <Button
                android:id="@+id/button_7"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_seven"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_8"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_eight"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_9"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_nine"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_subtraction"
                android:layout_height="@dimen/dp_80"
                android:background="@color/color_calculator"
                android:text="@string/key_subtraction"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/dp_5">

            <Button
                android:id="@+id/button_4"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_four"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_5"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_five"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_6"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_six"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_multip"
                android:layout_height="@dimen/dp_80"
                android:background="@color/color_calculator"
                android:text="@string/key_multiplication"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/dp_5">

            <Button
                android:id="@+id/button_1"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_one"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_2"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_two"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_3"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_three"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_dividion"
                android:layout_height="@dimen/dp_80"
                android:background="@color/color_calculator"
                android:text="@string/key_division"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/dp_5">

            <Button
                android:id="@+id/button_0"
                android:layout_height="@dimen/dp_80"
                android:layout_span="2"
                android:text="@string/key_zero"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_dog"
                android:layout_height="@dimen/dp_80"
                android:text="@string/key_dog"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_resutl"
                android:layout_height="@dimen/dp_80"
                android:background="@color/color_calculator"
                android:text="@string/key_resutl"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_40"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</LinearLayout>
